--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "libytnef-1.5.tar.bz": e9396738e2f03c872d9fef73e69b58121a4ae6b4
+  ytnef-1.9.3.tar.gz: 83d320ef862b0e1d1a9c6d5e717594e9360cc67e
