--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  ytnef-1.9.3.tar.gz: 83d320ef862b0e1d1a9c6d5e717594e9360cc67e
+  ytnef-master.tar.gz: 88d7032b68d52cac4b20eee4a61343496d085800
