--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "libytnef-1.5.tar.bz": e9396738e2f03c872d9fef73e69b58121a4ae6b4
+  ytnef-master.zip: be32b15969e5d7dafd364d59fd2ee637af674128
