--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  ytnef-master.tar.gz: 88d7032b68d52cac4b20eee4a61343496d085800
+  ytnef-master.zip: 88d7032b68d52cac4b20eee4a61343496d085800
