--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "libytnef-1.5.tar.bz": e9396738e2f03c872d9fef73e69b58121a4ae6b4
+  v2.0.tar.gz: 9750a815894b371d27ecddd911e80a7e077b02e4
